logOutput/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-deployement
  namespace: exercises
  labels:
    app: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
      - name: log-writer
        image: log-output:latest
        imagePullPolicy: Never
        args: ["python", "-u", "logOutput.py"]
        volumeMounts:
        - name: config-volume
          mountPath: /config
      - name: log-reader
        image: log-output:latest
        imagePullPolicy: Never
        args: ["python", "-u", "reader.py"]
        volumeMounts:
        - name: config-volume
          mountPath: /config
        ports:
        - containerPort: 8080
      volumes:
      - name: config-volume
        configMap:
          name: log-output-config
