logOutput/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-service
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
